test fix on mobile

--- a/src/components/controlCreate/controlCreate.scss
+++ b/src/components/controlCreate/controlCreate.scss
@@ -96,9 +96,9 @@
 		border: none;
 	}
 	@media screen and (max-width: 550px) {
-		max-width: 8rem;
-		height: 1.2rem;
-		padding: 0.6rem 0.6rem;
+		max-width: 12rem;
+		height: 1.4rem;
+		padding: 0.6rem 0.8rem;
 		margin: 0.2rem 0rem;
 		font-size: 1rem;
 	}
