--- a/src/components/renameWindow/renameWindow.scss
+++ b/src/components/renameWindow/renameWindow.scss
@@ -141,10 +141,10 @@
 					border: 0.01rem #ebf745 solid;
 				}
 				@media screen and (max-width: 550px) {
-					max-width: 9rem;
-					height: 1.2rem;
+					max-width: 12rem;
+					height: 1.4rem;
 					padding: 0.6rem 0.8rem;
-					margin: 0.4rem 0rem;
+					margin: 0.2rem 0rem;
 					font-size: 1rem;
 				}
 			}
